--- a/catalog.html
+++ b/catalog.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="/ styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
   </head>
   <body>
     <header class="page-header-catalog">
       <div class="logo-box">
-        <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
+        <img src="./images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
       </div>
       <div class="header">
         <nav class="icons-navigation">
           <ul class="icons-navigation-user">
             <li class="icons search">
                 <form class="icons search-general">
-                  <img src="/images/header/search.svg" alt="лупа" width="16" height="16" class="search-icon">
+                  <img src="./images/header/search.svg" alt="лупа" width="16" height="16" class="search-icon">
                   <input type="text" name="search" class="search-text" placeholder="Текст поиска">
                   <button type="submit" class="search-button">Найти</button>
                   </form>
             </li>
             <li class="icons enter">
               <a href="#" class="navigation-link-enter">
-              <img src="/images/header/enter.svg" alt="вход-иконка" width="13" height="12">
+              <img src="./images/header/enter.svg" alt="вход-иконка" width="13" height="12">
                 <span class="icons visually-hidden">
                   Войти
                 </span>
@@ -31,7 +31,7 @@
            <div class="compare-bin">
             <li class="icons item-user">
               <a href="#" class="navigation-link-compare">
-                <img src="/images/header/compare.svg" alt="сравнение-иконка" width="10" height="12">
+                <img src="./images/header/compare.svg" alt="сравнение-иконка" width="10" height="12">
                 <span class="icons visually-hidden">
                 Сравнить
                 </span>
@@ -40,7 +40,7 @@
             <li class="icons item-user">
               <a href="#" class="navigation-link-bin">
                 <span class="icons number">2</span>
-                <img src="/images/header/bin.svg" alt="корзина" width="16" height="14">
+                <img src="./images/header/bin.svg" alt="корзина" width="16" height="14">
                 <span class="icons visually-hidden">
                   Корзина
                 </span>
@@ -102,9 +102,9 @@
             <select name="sort">
                 <option value="popular">Популярные</option>
             </select>
-              <button type="button"><img src="/images/catalog/up.svg" alt="стрелка вверх" width="11" height="10">
+              <button type="button"><img src="./images/catalog/up.svg" alt="стрелка вверх" width="11" height="10">
               </button>
-              <button type="button"><img src="/images/catalog/down.svg" alt="стрелка вниз" width="11" height="10">
+              <button type="button"><img src="./images/catalog/down.svg" alt="стрелка вниз" width="11" height="10">
               </button>
           </div>
         </section>
@@ -173,14 +173,14 @@
         <ul class="catalog-products-list">
           <div class="box-selfie">
           <li class="catalog-products-item">
-            <img src="/images/catalog/selfie-stick.jpg" alt="Палка для селфи" width="360" height="380">
+            <img src="./images/catalog/selfie-stick.jpg" alt="Палка для селфи" width="360" height="380">
             <h3 class="comp">Любительская
                 селфи-палка
             </h3>
             <span>500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="/images/catalog/stick-pro-foto.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+            <img src="./images/catalog/stick-pro-foto.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
             <h3 class="comp">Профессиональная
                   селфи-палка
             </h3>
@@ -189,14 +189,14 @@
           </div>
           <div class="box-stick-foto">
           <li class="catalog-products-item">
-            <img src="/images/catalog/water-r-stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
+            <img src="./images/catalog/water-r-stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
             <h3 class="comp">Непотопляемая
                 селфи-палка
             </h3>
             <span>2 500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="/images/catalog/hand-foto.jpg" alt="Палка следуй за мной" width="360" height="380">
+            <img src="./images/catalog/hand-foto.jpg" alt="Палка следуй за мной" width="360" height="380">
             <h3 class="comp">Селфи-палка "Следуй за мной"
             </h3>
             <span>1 500 р</span>
@@ -244,7 +244,7 @@
 
     <footer class="page-footer">
       <div class="logo-description">
-        <img src="/images/header/logo.svg" class="footer logo" alt="Логотип Девайс" width="144.9" height="36">
+        <img src="./images/header/logo.svg" class="footer logo" alt="Логотип Девайс" width="144.9" height="36">
         <address class="description">Санкт-Петербург,набережная
                реки Карповки, 5, литера П
         </address>
@@ -256,15 +256,15 @@
           <a href="#contacts" class="link footer-box">контакты</a>
         </div>
         <div class="social">
-          <img src="/images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
-          <img src="/images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
-          <img src="/images/footer/twit.svg" alt="твиттер" width="15" height="14.06">
+          <img src="./images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
+          <img src="./images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
+          <img src="./images/footer/twit.svg" alt="твиттер" width="15" height="14.06">
         </div>
       </div>
       <div class="academy-contacts">
         <a class="tel white" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         <a class="academy-logo" href="https://htmlacademy.ru/">
-        <img src="/images/footer/academy logo.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
+        <img src="./images/footer/academy logo.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
       </div>
     </footer>
   </body>
