--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="/ styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
       <header class="page-header">
         <div class="logo-box">
-          <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
+          <img src="./images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
         </div>
         <div class="header">
           <nav class="icons-navigation">
             <ul class="icons-navigation-user">
               <li class="icons search">
                   <form class="icons search-general">
-                    <img src="/images/header/search.svg" alt="лупа" width="16" height="16" class="search-icon">
+                    <img src="./images/header/search.svg" alt="лупа" width="16" height="16" class="search-icon">
                     <input type="text" name="search" class="search-text" placeholder="Текст поиска">
                     <button type="submit" class="search-button">Найти</button>
                     </form>
               </li>
               <li class="icons enter">
                 <a href="#" class="navigation-link-enter">
-                <img src="/images/header/enter.svg" alt="вход-иконка" width="13" height="12">
+                <img src="./images/header/enter.svg" alt="вход-иконка" width="13" height="12">
                   <span class="icons visually-hidden">
                     Войти
                   </span>
@@ -31,7 +31,7 @@
              <div class="compare-bin">
               <li class="icons item-user">
                 <a href="#" class="navigation-link-compare">
-                  <img src="/images/header/compare.svg" alt="сравнение-иконка" width="10" height="12">
+                  <img src="./images/header/compare.svg" alt="сравнение-иконка" width="10" height="12">
                   <span class="icons visually-hidden">
                   Сравнить
                   </span>
@@ -40,7 +40,7 @@
               <li class="icons item-user">
                 <a href="#" class="navigation-link-bin">
                   <span class="icons number">2</span>
-                  <img src="/images/header/bin.svg" alt="корзина" width="16" height="14">
+                  <img src="./images/header/bin.svg" alt="корзина" width="16" height="14">
                   <span class="icons visually-hidden">
                     Корзина
                   </span>
@@ -80,7 +80,7 @@
         </div>
 
       <div class="quadcopt">
-        <img src="/images/main/foto quadcopt.png" class="quadcopt-img" alt="Фотография квадрокоптера" width="560" height="560">
+        <img src="./images/main/foto quadcopt.png" class="quadcopt-img" alt="Фотография квадрокоптера" width="560" height="560">
       </div>
       <div class="description-box">
         <section class="main-description">
@@ -108,7 +108,7 @@
         <li class="content">
           <a href="#" class="products-link">
             <div class="products-box">
-             <img src="/images/main/glasses.svg" class="vr" alt="Изображение VR очков"
+             <img src="./images/main/glasses.svg" class="vr" alt="Изображение VR очков"
                 width="97" height="55">
             </div>
             <div class="content-description">
@@ -118,7 +118,7 @@
         <li class="content">
             <a href="#" class="products-link">
               <div class="products-box">
-                <img src="/images/main/selfie stick .svg" class="selfie" alt="Изображение selfie палки"
+                <img src="./images/main/selfie stick .svg" class="selfie" alt="Изображение selfie палки"
                   width="86" height="117">
               </div>
               <div class="content-description">
@@ -129,7 +129,7 @@
         <li class="content">
             <a href="#" class="products-link">
               <div class="products-box">
-                <img src="/images/main/camera.svg" class="cameras" alt="Изображение action камеры"
+                <img src="./images/main/camera.svg" class="cameras" alt="Изображение action камеры"
                   width="71" height="87">
               </div>
               <div class="content-description">
@@ -140,7 +140,7 @@
         <li class="content">
             <a href="#" class="priducts-link">
               <div class="products-box">
-                <img src="/images/main/wristband.svg" class="fitness-wristband" alt="Изображение fitness браслета"
+                <img src="./images/main/wristband.svg" class="fitness-wristband" alt="Изображение fitness браслета"
                   width="107" height="65">
               </div>
               <div class="content-description">
@@ -151,7 +151,7 @@
         <li class="content">
             <a href="#" class="products-link">
               <div class="products-box">
-                <img src="/images/main/watch.svg" class="smart-watch" alt="Изображение умных часов"
+                <img src="./images/main/watch.svg" class="smart-watch" alt="Изображение умных часов"
                   width="56" height="98">
               </div>
               <div class="content-description">
@@ -162,7 +162,7 @@
         <li class="content">
             <a href="#" class="products-link">
               <div class="products-box">
-                <img src="/images/main/quadcopt.svg" class="copter" alt="Изображение квадрокоптера"
+                <img src="./images/main/quadcopt.svg" class="copter" alt="Изображение квадрокоптера"
                   width="132" height="69">
               </div>
               <div class="content-description">
@@ -187,7 +187,7 @@
               <p class="description">Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно беспатно!
                 Ведь<br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </div>
-            <img src="/images/main/delivery man.svg" class="delivery-man" alt="Изображение доставщика"
+            <img src="./images/main/delivery man.svg" class="delivery-man" alt="Изображение доставщика"
                 width="136" height="164">
             </div>
         </section>
@@ -195,12 +195,12 @@
 
       <div class="delivery-only">
         <section class="delivery-only-image">
-          <img src="/images/main/car.svg" class="delivery-car" alt="Иконка машины"
+          <img src="./images/main/car.svg" class="delivery-car" alt="Иконка машины"
            width="47" height="31">
         </section>
         <p class="only delivery-only-text">доставим редкий товар под заказ</p>
         <button type="button" class="button">
-          <img src="/images/main/point.svg" class="delivery-only-icon" alt="перевернутый знак"
+          <img src="./images/main/point.svg" class="delivery-only-icon" alt="перевернутый знак"
           width="2" height="12"></button>
       </div>
 
@@ -247,7 +247,7 @@
             <input type="email" name="email-date" placeholder="Ваш e-mail">
           </label>
           <button type="button" class="button">подписаться</button>
-          <img src="/images/main/green mark.svg" alt="галочка" width="14" height="14">
+          <img src="./images/main/green mark.svg" alt="галочка" width="14" height="14">
           <span class="description">Это бесплатно</span>
         </form>
       </section>
@@ -255,7 +255,7 @@
 
     <footer class="page-footer">
       <div class="logo-description">
-        <img src="/images/header/logo.svg" class="footer logo" alt="Логотип Девайс" width="144.9" height="36">
+        <img src="./images/header/logo.svg" class="footer logo" alt="Логотип Девайс" width="144.9" height="36">
         <address class="description">Санкт-Петербург,набережная
                реки Карповки, 5, литера П
         </address>
@@ -267,15 +267,15 @@
           <a href="#contacts" class="link footer-box">контакты</a>
         </div>
         <div class="social">
-          <img src="/images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
-          <img src="/images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
-          <img src="/images/footer/twit.svg" alt="твиттер" width="15" height="14.06">
+          <img src="./images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
+          <img src="./images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
+          <img src="./images/footer/twit.svg" alt="твиттер" width="15" height="14.06">
         </div>
       </div>
       <div class="academy-contacts">
         <a class="tel white" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         <a class="academy-logo" href="https://htmlacademy.ru/">
-        <img src="/images/footer/academy logo.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
+        <img src="./images/footer/academy logo.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
       </div>
     </footer>
   </body>
