--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="description-box">
         <section class="main-description">
           <h1 class="main">Порхает как бабочка,<br>жалит как пчела!</h1>
-          <p class="main-description">Этот обычный, на первый взгляд, квадрокоптер
+          <p class="description">Этот обычный, на первый взгляд, квадрокоптер
             оснащен <br> мощным лазером, замаскированным под стандартную камеру.
            </p>
          </section>
@@ -95,7 +95,7 @@
         <div class="details">
           <dl class="description-800m">
             <dt>800 м</dt>
-          <dd class="description">Дальность полета</dd>
+          <dd class="description-distance">Дальность полета</dd>
           <dl class="advantage-50m">
             <dt>50 м</dt>
           <dd class="advantage">Радиус поражения</dd>
@@ -222,14 +222,14 @@
         <h1 class="contacts">Контакты</h1>
         <p class="description contacts">Вы можете забрать товар сами, заезав в наш офис.
         Заодно сможете проверить работоспособность покупки.</p>
-        <h2 class="comp" >Интернет-магазин "Девайс"</h2>
-        <address><p class="description adress">Санкт-Петербург,набережная реки Карповки, 5, литера П</p>
+        <h2 class="comp time" >Интернет-магазин "Девайс"</h2>
+        <address><div class="description">Санкт-Петербург,набережная реки Карповки, 5, литера П</div>
           <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <ul class="time">
-          <h2 class="comp"> Время работы</h2>
-          <li class="comp">пн-пт: с 10:00 до 22:00</li>
-          <li class="comp">сб-вс: с 10:00 до 19:00</li>
+          <h2 class="comp time"> Время работы</h2>
+          <li class="description">пн-пт: с 10:00 до 22:00</li>
+          <li class="description">сб-вс: с 10:00 до 19:00</li>
         </ul>
         <a href="#" class="link">напишите нам</a>
       </section>
@@ -256,7 +256,7 @@
     <footer class="page-footer">
       <div class="logo-description">
         <img src="./images/header/logo.svg" class="footer logo" alt="Логотип Девайс" width="144.9" height="36">
-        <address class="description">Санкт-Петербург,набережная
+        <address class="address-footer">Санкт-Петербург,набережная
                реки Карповки, 5, литера П
         </address>
       </div>
